--- a/frontend/src/styles/site.scss
+++ b/frontend/src/styles/site.scss
@@ -1,26 +1,26 @@
 @import '_fonts.scss';
 @import '_variables.scss';
-
 body {
     font-family: 'Roboto', sans-serif;
     background-color: $background-color;
     margin: 0;
-    padding-top: 70px;
-
+    // padding-top: 70px;
     a {
         text-decoration: none;
         color: white;
     }
 }
 
+.navbar-logo {
+    height: 100px;
+    padding: 10px;
+}
 
 .movies-container {
     display: flex;
     justify-content: center;
     padding: 1em;
     margin: 0 auto;
-
-
     .cards-container {
         padding: 1em;
         display: flex;
@@ -29,22 +29,17 @@ body {
         flex-flow: row wrap;
         flex-wrap: wrap;
         gap: 50px;
-
-
         .card-container {
             .movie-card {
                 min-height: 250px;
-
                 .movie-poster-container {
                     position: relative;
-
                     .category-container {
                         position: absolute;
                         top: 0;
                         left: 0;
                         display: flex;
                         gap: 3px;
-
                         .category-item {
                             display: inline-block;
                             font-weight: bold;
@@ -53,9 +48,9 @@ body {
                             height: 16px;
                             line-height: 16px;
                             background-color: $primary-color;
+                            color: white;
                         }
                     }
-
                     .movie-rating-container {
                         position: absolute;
                         top: 5px;
@@ -69,7 +64,6 @@ body {
                         text-align: center;
                         line-height: 30px;
                     }
-
                     .movie-poster {
                         min-height: 340px;
                         width: 100%;
@@ -77,7 +71,6 @@ body {
                         object-fit: cover;
                     }
                 }
-
                 .movie-title-container {
                     height: 40px;
                     vertical-align: middle;
@@ -86,12 +79,8 @@ body {
                     justify-content: center;
                     display: flex;
                     align-items: center;
-
-                    
-
                     a {
                         color: black;
-
                         &:hover {
                             color: $primary-color;
                         }
@@ -102,37 +91,35 @@ body {
     }
 }
 
-
 .movie-details-container {
     display: flex;
     justify-content: flex-start;
-
+    align-items: center;
     .image {
         margin: 0;
-        padding: 0;        
+        padding: 0;
+        width: 40%;
     }
-
+    img {
+        width: 100%;
+    }
     .info {
         width: 100%;
         height: 100%;
-
         .info-container {
             position: relative;
             padding: 1.5em;
-
             .score-container {
                 position: absolute;
                 top: 2em;
                 right: 2em;
                 line-height: 18px;
                 font-weight: bold;
-                font-size: 18px;                
+                font-size: 18px;
             }
-
             p {
-                line-height: 1.75em;                
+                line-height: 1.75em;
             }
-
             .buttons-container {
                 padding-top: 2em;
             }
